fix confirm section mobile view

--- a/src/blocks/modules/signup/index.scss
+++ b/src/blocks/modules/signup/index.scss
@@ -144,6 +144,7 @@
 
     @include tab {
       flex-direction: column;
+      width: 100%;
 
       p {
         font-size: 1.4rem;
